# xzibot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  test.yml
src/: handler.rs  main.rs
src/commands/: blague.rs  buzz.rs  connerie.rs  eight_ball.rs  episodes.rs  google.rs  google_image.rs  horoscope.rs  meme.rs  mod.rs  quote.rs  skandite.rs  youtube.rs
src/db/: connerie.rs  mod.rs  models.rs  quote.rs  rss.rs  skandite.rs
src/utils/: google.rs  mod.rs
