[package]
name = "xzibot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
chrono-humanize = "0.2"
feed-rs = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
linked-hash-map = "0.5"
linkify = "0.7"
normalize_url = "0.2"
rand = "0.8"
regex = "1.5"
scraper = "0.12"
serde = "1.0"
serde_json = "1.0"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current", features = [
    "unstable_discord_api",
] }
sql-builder = "3.1"
sqlx = { version = "0.5", features = [
    "mysql",
    "chrono",
    "runtime-tokio-rustls",
] }
tokio = { version = "1", features = ["full"] }
ureq = { version = "2.3", features = ["json"] }
url = "2.2"
